--- a/Trabalho/Views/Produto/Index.cshtml
+++ b/Trabalho/Views/Produto/Index.cshtml
@@ -5,23 +5,26 @@
 
 <h4>Cadastro de Produto</h4>
 <br />
-<div class="row">
+<div class="row" style="margin-left:20px">
     <form class="form-inline" onload="indexProduto.init()">
         <div class="form-group">
             <input type="text" class="form-control" id="txtNome" placeholder="Digite o Nome do Produto" />
         </div>
-        <div class="form-group">
+        <div class="form-group" style="margin-left:2px">
             <select class="form-control" style="color:darkgray" id="selCategoria">
                 <option>Selecionar um Produto</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group" style="margin-left:10px">
             <input type="button" class="btn-success" value="Cadastrar" onclick="indexProduto.enviar()" />
         </div>
     </form>
 </div>
+<br />
+<i id="gravou"></i>
+<br />
+<br />
 
-<!-- /.row (main row) -->
 
 @section javascript {
     <script src="~/js/views/produto/Index.js"></script>
