--- a/Trabalho/Views/Login/Index.cshtml
+++ b/Trabalho/Views/Login/Index.cshtml
@@ -3,28 +3,77 @@
     ViewData["Title"] = "Index";
     Layout = null;
 }
-<link rel="stylesheet" href="~/template/klorofil/assets/vendor/bootstrap/css/bootstrap.min.css">
-<script src="https://kit.fontawesome.com/3c736d02dd.js" crossorigin="anonymous"></script>
-<center>
-    <div class="col-md-4"></div>
-    <div class="col-md-3">
-            <h2 style="font-weight:bold;font-family:Cooper;color:#102d8e">LOGIN</h2>
-            <form>
-                <div class="form-group">
-                    <input type="text" placeholder="Usuario" id="usuario" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <input type="password" placeholder="Senha" id="senha" class="form-control" />
-                </div>
-                <div id="divMsg" class="text-danger" style="margin-bottom:10px"></div>
-                <input type="button" value="Enviar" onclick="indexLogin.logar()" class="btn btn-primary margin" />
-                <input type="button" value="Obter" onclick="indexLogin.obter()" class="btn btn-info" />
-                <input type="button" value="Consultar" onclick="indexLogin.consultar()" class="btn btn-success" />
-                <input type="button" value="Alterar" onclick="indexLogin.alterar()" class="btn btn-warning" />
-                <input type="button" value="Excluir" onclick="indexLogin.excluir()" class="btn btn-danger" />
-            </form>
-    </div>
+<!doctype html>
+<html lang="pt-br" class="fullscreen-bg">
 
-</center>
+<head>
+    <title>Login | Klorofil - Free Bootstrap Dashboard Template</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!-- VENDOR CSS -->
+    <link rel="stylesheet" href="~/template/klorofil/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/template/klorofil/assets/vendor/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/template/klorofil/assets/vendor/linearicons/style.css">
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="~/template/klorofil/assets/css/main.css">
+    <!-- FOR DEMO PURPOSES ONLY. You should remove this in your project -->
+    <link rel="stylesheet" href="~/template/klorofil/assets/css/demo.css">
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
+    <!-- ICONS -->
+    <link rel="apple-touch-icon" sizes="76x76" href="~/template/klorofil/assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="~/template/klorofil/assets/img/favicon.png">
+</head>
+
+<body>
+    <!-- WRAPPER -->
+    <div id="wrapper">
+        <div class="vertical-align-wrap">
+            <div class="vertical-align-middle">
+                <div class="auth-box ">
+                    <div class="left">
+                        <div class="content">
+                            <div class="header">
+                                <div class="logo text-center"><img src="~/template/klorofil/assets/img/logo-dark.png" alt="Klorofil Logo"></div>
+                                <p class="lead">Autenticar à sua conta</p>
+                            </div>
+                            <form class="form-auth-small">
+                                <div class="form-group">
+                                    <label for="signin-user" class="control-label sr-only">Usuario</label>
+                                    <input type="text" class="form-control" id="usuario" placeholder="Usuario">
+                                </div>
+                                <div class="form-group">
+                                    <label for="signin-password" class="control-label sr-only">Senha</label>
+                                    <input type="password" class="form-control" id="senha" placeholder="Senha">
+                                </div>
+                                <div class="form-group clearfix">
+                                    <label class="fancy-checkbox element-left">
+                                        <input type="checkbox">
+                                        <span>Lembrar-me</span>
+                                    </label>
+                                </div>
+                                <button type="button" class="btn btn-primary btn-lg btn-block" onclick="indexLogin.logar()">LOGIN</button>
+                                <div class="bottom">
+                                    <span class="helper-text"><i class="fa fa-lock"></i> <a href="#">Perdeu a senha?</a></span>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="overlay"></div>
+                        <div class="content text">
+                            <h1 class="heading">E-Commerce LP4 - BSI 2021</h1>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END WRAPPER -->
+</body>
+
+</html>
 <script src="~/lib/HTTPClient.js"></script>
 <script src="~/js/views/login/index.js"></script>
