--- a/Trabalho/Views/Shared/_Layout.cshtml
+++ b/Trabalho/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                 <nav>
                     <ul class="nav">
                         <li><a href="~/Home" class=""><i class="lnr lnr-home"></i> <span>Home Page</span></a></li>
-                        <li><a href="~/Login" class=""><i class="lnr lnr-linearicons"></i> <span>Login</span></a></li>
+                        <li><a href="~/Login" class=""><i class="lnr lnr-user"></i> <span>Login</span></a></li>
                         <li><a href="~/Produto" class=""><i class="fa fa-cart-plus"></i> <span>Cadastrar Produto</span></a></li>
                     </ul>
                 </nav>
