--- a/Trabalho/Views/Produto/Index.cshtml
+++ b/Trabalho/Views/Produto/Index.cshtml
@@ -6,18 +6,21 @@
 <h4>Cadastro de Produto</h4>
 <br />
 <div class="row" style="margin-left:20px">
-    <form class="form-inline" onload="indexProduto.init()">
-        <div class="form-group">
+    <form class="form" onload="indexProduto.init()">
+        <div class="form-group col-md-3">
             <input type="text" class="form-control" id="txtNome" placeholder="Digite o Nome do Produto" />
         </div>
-        <div class="form-group" style="margin-left:2px">
+        <div class="form-group col-md-2">
             <select class="form-control" style="color:darkgray" id="selCategoria">
                 <option>Selecionar um Produto</option>
             </select>
         </div>
-        <div class="form-group" style="margin-left:10px">
-            <input type="button" class="btn-success" value="Cadastrar" onclick="indexProduto.enviar()" />
-            <input type="button" class="btn-warning" value="Limpar" onclick="indexProduto.limpar()" />
+        <div class="form-group" style="margin-left:2px;margin-bottom:30px">
+            <input type="file" class="form-control-file" id="fImagem"/>
+        </div>
+        <div class="form-group col-md-2" style="margin-left:10px">
+            <input type="button" class="btn-success col-md-5" value="Cadastrar" onclick="indexProduto.enviar()" />
+            <input type="button" class="btn-warning col-md-5" style="margin-left:5px" value="Limpar" onclick="indexProduto.limpar()" />
             <input type="hidden" id="prodId"></input>
         </div>
     </form>
