--- a/Trabalho/Views/Produto/Listar.cshtml
+++ b/Trabalho/Views/Produto/Listar.cshtml
@@ -8,17 +8,9 @@
 
 <div class="mt-5 d-none" id="divResultado">
 
-    <table class="table table-striped table-hover table-sm">
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>Categoria</th>
-            </tr>
-        </thead>
-        <tbody id="bodyResultado">
-            <!--Carregado por ajax-->
-        </tbody>
-    </table>
+    <div class="row" id="bodyResultado">
+
+    </div>
 </div>
 
 
