--- a/Trabalho/Views/Produto/Index.cshtml
+++ b/Trabalho/Views/Produto/Index.cshtml
@@ -21,7 +21,7 @@
         <div class="form-group col-md-2" style="margin-left:10px">
             <input type="button" class="btn-success col-md-5" value="Cadastrar" onclick="indexProduto.enviar()" />
             <input type="button" class="btn-warning col-md-5" style="margin-left:5px" value="Limpar" onclick="indexProduto.limpar()" />
-            <input type="hidden" id="prodId"></input>
+            <input type="hidden" id="prodId"/>
         </div>
     </form>
 </div>
